<resources>
    <string name="app_name">ChallengeUp</string>
    <!-- activity_main.xml : Connexion -->
    <string name="login">Se connecter</string>
    <string name="password">Mot de passe</string>
    <string name="username">Nom d\'utilisateur ou e-mail</string>
    <string name="stayConnected">Rester connecté</string>
    <string name="noAccountYet">Vous n\'avez pas de compte ?</string>
    <string name="createAccount">S\'inscrire</string>
    <string name="logWithSocialLogin">Se connecter avec Google ou Face de bouc</string>
    <!-- activity_new_account.xml : Création de compte -->
    <string name="email">Adresse e-mail</string>
    <string name="username2">Nom d\'utilisateur</string>
    <string name="confirmPassword">Confirmer le mot de passe</string>
    <string name="finishCreateAccount">Créer un compte</string>
    <!-- activity_home.xml : Accueil -->
    <string name="dashboardLabel">Tableau de bord</string>
    <string name="suggestionsLabel">Suggestions</string>
    <string name="newChallengeLabel">Nouveau challenge</string>
    <!-- activity_new_challenge.xml : Nouveau Challenge -->
    <string name="newChallengeTitle">Nom du challenge</string>
    <string name="newChallengeDescription">Description</string>
    <string name="newChallengeTag">Catégorie</string>
    <string name="frequency">Fréquence du challenge</string>
    <string name="daily">Quotidien</string>
    <string name="weekly">Hebdomadaire</string>
    <string name="monthly">Mensuel</string>
    <string name="createChallenge">Créer un challenge</string>
    <!-- fragment_dashboard.xml : Tableau de bord -->
    <string name="regularity">Régularité</string>
    <string name="myChallenges">Mes challenges</string>
    <string name="removeChallenge">Retirer</string>
    <string name="declareCompleted">Déclarer accompli</string>
    <!-- fragment_suggestions.xml : Suggestions -->
    <string name="popularChallenges">Challenges populaires</string>
    <string name="subscribe">Souscrire</string>
    <string name="report">Signaler</string>
    <!-- navigation_drawer.xml : Drawer -->
    <string name="watchProfileDrawer">Consulter un profil via une URL</string>
    <string name="settingsDrawer">Paramètres</string>
    <string name="setPublicProfileDrawer">Rendre mon profil public ou privé</string>
    <string name="disconnect">Se déconnecter</string>
    <!-- home_top_app_bar.xml : App bar -->
    <string name="account">Mon compte</string>
    <!-- Préférences partagées -->
    <string name="preference_file_key">fr.usmb.challengeup.PREFERENCE_FILE_KEY</string>
    <string name="preference_user_key">fr.usmb.challengeup.USER</string>
    <string name="preference_stay_connected_key">fr.usmb.challengeup.STAY_CONNECTED</string>
    <!-- Social login -->
    <string name="facebook_app_id">1797809804030041</string>
    <string name="fb_login_protocol_scheme">fb1797809804030041</string>
    <string name="facebook_client_token">d180a47744dbcb260dc2ef778e83f711</string>
    <!-- Autre -->
    <string name="server_domain">https://challenge-up.oups.net</string>
    <string name="congratulations">C\'est bien, continuez comme cela ! Bravo ! Chouette !</string>
    <string name="encouragement">Allez ! On ne se laisse pas abattre ! Il reste des challenges à accomplir !</string>
</resources>