<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardDrawer"
        android:title="@string/dashboardLabel">
        <menu>
            <item
                android:id="@+id/watchProfileDrawer"
                android:title="@string/watchProfileDrawer"
                android:checkable="true"/>
            <item
                android:id="@+id/outbox_item"
                android:title="Titre2"
                android:checkable="true"/>
            <item
                android:id="@+id/favourites_item"
                android:title="Favoris"
                android:checkable="true"/>
        </menu>
    </item>

    <item
        android:id="@+id/settingsDrawer"
        android:title="@string/settingsDrawer">
        <menu>
            <item
                android:title="@string/setPublicProfileDrawer"
                android:checkable="true" />
            <item
                android:title="@string/disconnect"
                android:checkable="true" />
        </menu>
    </item>

</menu>