<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_margin="32dp"
    android:orientation="vertical"
    tools:context=".NewChallengeActivity">

    <!-- Segemented Button : Périodicité -->
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/segmentedButtonPeriodicity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/buttonDaily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily"
            />
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/buttonWeekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekly"
            />
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/buttonMonthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly"
            />
    </com.google.android.material.button.MaterialButtonToggleGroup>

</LinearLayout>